Dados de vinho 2.0

--- a/dadosVinhos.ipynb
+++ b/dadosVinhos.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "aa78473c",
    "metadata": {},
    "outputs": [
@@ -1373,15 +1373,28 @@
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
+    "#Aqui você importa o algoritmo Regressão Logística, que na verdade é um classificador muito usado para:\n",
+    "# classificação binária\n",
+    "# classificação multiclasse (com algumas estratégias)\n",
     "\n",
-    "model = LogisticRegression(multi_class=\"ovr\", max_iter=500)\n",
+    "model = LogisticRegression(multi_class=\"ovr\", max_iter=500) # Adicionei max_iter=500 porque a regressão logística geralmente precisa de mais iterações para convergir em dados reais.\n",
+    "# multi_class=\"ovr\" significa:\n",
+    "#One-vs-Rest (Um contra todos)\n",
+    "# Ou seja:\n",
+    " #Se você tiver 3 classes (0,1,2)\n",
+    "# Ele vai treinar 3 modelos internos:\n",
+    "# classe 0 vs restantes\n",
+    "# classe 1 vs restantes\n",
+    "# classe 2 vs restantes\n",
+    "# É a estratégia mais comum e funciona muito bem.\n",
     "\n",
-    "model.fit(X_train_scaled, y_train)\n"
+    "model.fit(X_train_scaled, y_train)\n",
+    "# Isso treina a regressão logística nos dados."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "ec2a9b14",
    "metadata": {},
    "outputs": [
@@ -1405,15 +1418,34 @@
    ],
    "source": [
     "from sklearn.metrics import accuracy_score, classification_report\n",
+    "# Aqui importamos duas funções:\n",
+    "# ✔ accuracy_score Mede quantas previsões o modelo acertou. É o número de acertos dividido pelo número total de exemplos.\n",
+    "\n",
+    "# ✔ classification_report Gera um relatório completo com: precision/recall/f1-score/support\n",
+    "# Isso é ótimo para ver se o modelo está equilibrado entre as classes.\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
+    "\n",
+    "#O método .predict() faz o modelo prever a classe de cada exemplo em X_test.\n",
+    "#O resultado fica armazenado em y_pred.\n",
+    "\n",
     "print(accuracy_score(y_test, y_pred))\n",
-    "print(classification_report(y_test, y_pred))"
+    "\n",
+    "# Compara o que o modelo previu (y_pred) com as respostas reais (y_test). Retorna um número entre 0 e 1.\n",
+    "#Ex.: 0.90 → o modelo acertou 90%.\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Esse relatório mostra:\n",
+    "# 🔹 Precision : Das previsões positivas, quantas estavam corretas?\n",
+    "# 🔹 Recall : De todas as ocorrências reais da classe, quantas o modelo encontrou?\n",
+    "# 🔹 F1-score : Média harmônica entre precision e recall. Medida mais equilibrada.\n",
+    "# 🔹 Support : Quantos exemplos reais existem de cada classe no conjunto de teste."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "28747afc",
    "metadata": {},
    "outputs": [
@@ -1427,15 +1459,30 @@
    ],
    "source": [
     "from sklearn.svm import SVC\n",
+    "# Aqui importamos o modelo SVC (Support Vector Classifier), que é a versão de classificação da Máquina de Vetores de Suporte.\n",
+    "# Ele é um dos algoritmos mais poderosos para: separação de classes,hiperplanos de decisão,dados complexos com fronteiras não lineares.\n",
     "\n",
     "svm = SVC()\n",
+    "#Aqui criamos o modelo SVC com os parâmetros padrão, que são:\n",
+    "# kernel=\"rbf\" (radial basis function)\n",
+    "C=1\n",
+    "# gamma=\"scale\"\n",
+    "# Esse kernel RBF permite capturar relações não lineares na tabela.\n",
+    "\n",
     "svm.fit(X_train, y_train)\n",
-    "print(svm.score(X_test, y_test))"
+    "# Treina o modelo com:\n",
+    "# X_train → suas variáveis explicativas\n",
+    "#y_train → a classe alvo (labels)\n",
+    "# Durante o treino, o algoritmo busca o melhor hiperplano que separa as classes com a maior margem possível.\n",
+    "\n",
+    "print(svm.score(X_test, y_test))\n",
+    "# O método .score() faz: prever classes de X_test/comparar com y_test/retornar a acurácia\n",
+    "# Ou seja, a porcentagem de acertos do SVM no conjunto de teste."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e9439938",
    "metadata": {},
    "outputs": [
@@ -1449,15 +1496,37 @@
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Aqui importamos o algoritmo Random Forest, um dos modelos mais fortes para classificação.\n",
+    "# Ele funciona criando várias árvores de decisão e combinando todas para dar uma resposta mais estável e precisa.\n",
     "\n",
     "rf = RandomForestClassifier()\n",
+    "# Aqui criamos o modelo com parâmetros padrão, como:\n",
+    "# n_estimators=100 → 100 árvores na floresta\n",
+    "# criterion=\"gini\" → métrica de pureza\n",
+    "# max_depth=None → árvores crescem livremente\n",
+    "# bootstrap=True → usa amostragem com reposição\n",
+    "# O modelo padrão já funciona muito bem para muitos problemas.\n",
+    "\n",
     "rf.fit(X_train, y_train)\n",
-    "print(rf.score(X_test, y_test))"
+    "# Você treina-se o Random Forest com os dados de treino:\n",
+    "# X_train → características (variáveis)\n",
+    "# y_train → classes (labels)\n",
+    "# Durante o treino, o modelo:\n",
+    "# cria várias árvores de decisão aleatórias\n",
+    "# treina cada uma com uma parte dos dados\n",
+    "# combina os resultados das árvores para fazer previsões\n",
+    "\n",
+    "print(rf.score(X_test, y_test))\n",
+    "\n",
+    "# O .score() retorna a acurácia, ou seja:\n",
+    "#porcentagem de acertos do modelo no conjunto de teste.\n",
+    "# Exemplo de saída: 1,0\n",
+    "# Isso significa 100% de acurácia — um ótimo resultado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2e7c9c66",
    "metadata": {},
    "outputs": [
@@ -1487,12 +1556,21 @@
    ],
    "source": [
     "importance = pd.Series(rf.feature_importances_, index=tabela.columns[:-1])\n",
-    "importance.sort_values(ascending=False)"
+    "importance.sort_values(ascending=False)\n",
+    "\n",
+    "# Depois que você treina um RandomForestClassifier, ele calcula automaticamente a importância de cada variável do conjunto de dados.\n",
+    "# Essa importância representa:\n",
+    "# Quanto cada coluna contribuiu para que o modelo acertasse as previsões.\n",
+    "# Ou seja, ele mostra quais variáveis são mais relevantes.\n",
+    "# Exemplo:\n",
+    "# álcool pode ser muito importante\n",
+    "# próline pode ter importância média\n",
+    "# flavonoids pode ter baixa importância"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "616969e3",
    "metadata": {},
    "outputs": [
@@ -1509,15 +1587,40 @@
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
+    "# Aqui importamos a função que calcula a confusion matrix, usada para avaliar o desempenho de modelos de classificação\n",
     "\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
+    "# Aqui comparamos:\n",
+    "# y_test → valores reais (verdadeiros)\n",
+    "# y_pred → valores previstos pelo modelo\n",
+    "# E o resultado é uma matriz que mostra:\n",
+    "\n",
+    "#                   Previsto: Classe A\t   Previsto: Classe B\n",
+    "# Real: Classe A\tacertos da classe A\t   erros da classe A\t\n",
+    "# Real: Classe B\terros da classe B\t   acertos da classe B\t\n",
+    "\n",
+    "# Isso permite ver:\n",
+    "#onde o modelo acerta,\n",
+    "#onde ele erra, quais classes são mais confundidas.\n",
+    "\n",
     "sns.heatmap(cm, annot=True, cmap=\"Blues\", fmt=\"d\")\n",
-    "plt.show()"
+    "# ✔ sns.heatmap(cm)\n",
+    "# Cria um mapa visual da matriz de confusão.\n",
+    "# ✔ annot=True\n",
+    "# Mostra os números dentro das células.\n",
+    "# ✔ cmap=\"Blues\"\n",
+    "# Escolhe o gradiente azul como cor.\n",
+    "# ✔ fmt=\"d\"\n",
+    "# Formata os números como inteiros.\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "# Apresenta os graficos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "b4f9d13e",
    "metadata": {},
    "outputs": [
@@ -1534,14 +1637,36 @@
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
+    "# Essa função permite rodar validação cruzada, uma técnica fundamental para avaliar modelos de Machine Learning.\n",
     "\n",
     "scores = cross_val_score(LogisticRegression(), X_scaled, y, cv=5)\n",
-    "scores.mean()"
+    "# Aqui usamos:\n",
+    "# ✔ Modelo usado\n",
+    "# LogisticRegression()  → Treina um modelo de regressão logística.\n",
+    "\n",
+    "# ✔ Dados usados\n",
+    "# X_scaled → variáveis de entrada normalizadas\n",
+    "# y → variável alvo (target)\n",
+    "\n",
+    "# ✔ Número de divisões\n",
+    "# cv=5 → validação cruzada com 5 folds:\n",
+    "\n",
+    "# O conjunto de dados é dividido assim:\n",
+    "# 5 partes do dataset/4 partes para treino/1 parte para teste\n",
+    "# repete 5 vezes, trocando o conjunto de teste a cada rodada\n",
+    "# Isso evita o problema de: depender só de um único train/test split/modelo “ganhar sorte” em uma divisão específica\n",
+    "# Com cross-validation, você obtém uma avaliação mais estável e mais confiável.\n",
+    "\n",
+    "\n",
+    "scores.mean()\n",
+    "#Isso pega a média das 5 avaliações.\n",
+    "# Nosso modelo tem aproximadamente 98% de acurácia média\n",
+    "# Muito mais confiável que uma única métrica."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "933dadd0",
    "metadata": {},
    "outputs": [
@@ -1555,10 +1680,22 @@
    ],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
+    "# Aqui você importa o algoritmo Gaussian Naive Bayes, um dos modelos mais simples e rápidos para classificação.\n",
+    "# Ele assume que: os dados seguem uma distribuição normal (gaussiana),as variáveis são independentes entre si (daí o nome Naive = ingênuo).\n",
+    "# Mesmo com essa suposição forte, ele funciona MUITO bem em muitos problemas.\n",
     "\n",
     "nb = GaussianNB()\n",
+    "# Aqui você cria o modelo Naive Bayes com os parâmetros padrão.\n",
+    "\n",
     "nb.fit(X_train, y_train)\n",
-    "print(nb.score(X_test, y_test))"
+    "# O modelo aprende usando:\n",
+    "# X_train → características\n",
+    "# y_train → classes\n",
+    "# GaussianNB é muito rápido e não precisa de muitos ajustes.\n",
+    "\n",
+    "print(nb.score(X_test, y_test))\n",
+    "\n",
+    "# .score() calcula a acurácia, ou seja: porcentagem de acertos do modelo no teste."
    ]
   }
  ],
